feat:商品分類検索
Add product category search functionality with criteria

Introduced the ability to search product categories using criteria such as code, name, and path, with pagination support. Added new repository methods, service logic, API endpoint, and associated test cases for comprehensive validation.